refactor documentation for clarity on ports, adapters, and security components